--- a/package.json
+++ b/package.json
@@ -20,17 +20,25 @@
     "test:e2e": "jest --config ./apps/user/test/jest-e2e.json"
   },
   "dependencies": {
+    "@nestjs/axios": "^3.0.3",
+    "@nestjs/bullmq": "^10.2.1",
     "@nestjs/common": "^10.4.5",
     "@nestjs/config": "^3.2.3",
     "@nestjs/core": "^10.4.5",
     "@nestjs/mongoose": "^10.0.10",
     "@nestjs/platform-express": "^10.4.5",
     "@nestjs/swagger": "^7.4.2",
+    "@nestjs/typeorm": "^10.0.2",
+    "axios": "^1.7.7",
+    "bullmq": "^5.21.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "mongoose": "^8.7.1",
+    "redis": "^4.7.0",
     "reflect-metadata": "^0.2.2",
-    "rxjs": "^7.8.1"
+    "rxjs": "^7.8.1",
+    "sqlite3": "^5.1.7",
+    "typeorm": "^0.3.20"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.4.5",
@@ -72,7 +80,11 @@
     "coverageDirectory": "./coverage",
     "testEnvironment": "node",
     "roots": [
-      "<rootDir>/apps/"
-    ]
+      "<rootDir>/apps/",
+      "<rootDir>/libs/"
+    ],
+    "moduleNameMapper": {
+      "^@app/common(|/.*)$": "<rootDir>/libs/common/src/$1"
+    }
   }
 }
